crates/engine/tests/snapshots/oracle_parser__snapshot_questing_beast.snap
---
source: crates/engine/tests/oracle_parser.rs
expression: result
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "AddRestriction",
        "restriction": {
          "type": "DamagePreventionDisabled",
          "source": 0,
          "expiry": {
            "type": "EndOfTurn"
          },
          "scope": {
            "type": "SourcesControlledBy",
            "data": 0
          }
        }
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": null,
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [
    {
      "mode": "DamageDone",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "DealDamage",
          "amount": {
            "type": "Ref",
            "qty": {
              "type": "EventContextAmount"
            }
          },
          "target": {
            "type": "Typed",
            "type_filters": [
              "Planeswalker"
            ],
            "controller": "You",
            "properties": []
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "valid_card": null,
      "origin": null,
      "destination": null,
      "trigger_zones": [
        "Battlefield"
      ],
      "phase": null,
      "optional": false,
      "damage_kind": "CombatOnly",
      "secondary": false,
      "valid_target": null,
      "valid_source": {
        "type": "SelfRef"
      },
      "description": "Whenever Questing Beast deals combat damage to a planeswalker, it deals that much damage to target planeswalker that player controls.",
      "constraint": null,
      "condition": null,
      "batched": false
    }
  ],
  "statics": [
    {
      "mode": "CantBeBlocked",
      "affected": {
        "type": "SelfRef"
      },
      "modifications": [],
      "condition": {
        "type": "Unrecognized",
        "text": "by creatures with power 2 or less"
      },
      "affected_zone": null,
      "effect_zone": null,
      "characteristic_defining": false,
      "description": "~ can't be blocked by creatures with power 2 or less."
    }
  ],
  "replacements": [],
  "extractedKeywords": []
}
