crates/engine/tests/snapshots/oracle_parser__snapshot_rancor.snap
---
source: crates/engine/tests/oracle_parser.rs
assertion_line: 128
expression: result
---
{
  "abilities": [],
  "triggers": [
    {
      "mode": "ChangesZone",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "Bounce",
          "target": {
            "type": "SelfRef"
          },
          "destination": null
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "valid_card": {
        "type": "SelfRef"
      },
      "origin": "Battlefield",
      "destination": "Graveyard",
      "trigger_zones": [
        "Battlefield"
      ],
      "phase": null,
      "optional": false,
      "damage_kind": "Any",
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": "When Rancor is put into a graveyard from the battlefield, return Rancor to its owner's hand.",
      "constraint": null,
      "condition": null,
      "batched": false
    }
  ],
  "statics": [
    {
      "mode": "Continuous",
      "affected": {
        "type": "Typed",
        "type_filters": [
          "Creature"
        ],
        "controller": null,
        "properties": [
          {
            "type": "EnchantedBy"
          }
        ]
      },
      "modifications": [
        {
          "type": "AddPower",
          "value": 2
        },
        {
          "type": "AddToughness",
          "value": 0
        },
        {
          "type": "AddKeyword",
          "keyword": "Trample"
        }
      ],
      "condition": null,
      "affected_zone": null,
      "effect_zone": null,
      "characteristic_defining": false,
      "description": "Enchanted creature gets +2/+0 and has trample."
    }
  ],
  "replacements": [],
  "extractedKeywords": []
}
